--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -36,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TECHCONNECT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
